[project]
name = "temporal-series"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "feature-engine>=1.9.4",
    "featuretools>=1.31.0",
    "jupyter>=1.1.1",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tsfresh>=0.21.2",
]
